Set up application to call Yelp API based on provided zip code.

--- a/Intralot_Coding_Exercise/app/build.gradle
+++ b/Intralot_Coding_Exercise/app/build.gradle
@@ -3,6 +3,9 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
 
+    buildFeatures {
+        viewBinding = true
+    }
 
     defaultConfig {
         applicationId "com.ss.intralot_coding_exercise"
