--- a/Intralot_Coding_Exercise/app/build.gradle
+++ b/Intralot_Coding_Exercise/app/build.gradle
@@ -20,6 +20,10 @@ android {
     buildTypes.each {
         it.buildConfigField 'String', 'YELP_TOKEN', YelpToken
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -28,6 +32,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.squareup.okhttp3:okhttp:4.7.2'
+    implementation 'com.android.support:recyclerview-v7:+'
+    implementation 'net.mintern:primitive:1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
